--- a/package.json
+++ b/package.json
@@ -11,16 +11,28 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.0",
+        "ajv": "^8.17.1",
         "axios": "^1.7.9",
+        "blurhash": "^2.0.5",
         "bootstrap": "^5.3.3",
+        "date-fns": "^4.1.0",
+        "js-cookie": "^3.0.5",
+        "js-file-download": "^0.4.12",
+        "jwt-decode": "^4.0.0",
+        "quill": "^2.0.2",
         "react": "^19.0.0",
+        "react-blurhash": "^0.3.0",
         "react-bootstrap": "^2.10.9",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "react-icons": "^5.4.0",
+        "react-lazy-load-image-component": "^1.6.3",
         "react-loading-indicators": "^1.0.0",
+        "react-loading-skeleton": "^3.5.0",
         "react-router-dom": "^7.1.5",
+        "react-toastify": "^11.0.5",
         "styled-components": "^6.1.15",
+        "yet-another-react-lightbox": "^3.21.7",
         "yup": "^1.6.1"
     },
     "devDependencies": {
