--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "foundation-project",
+    "name": "kiddies-and-me-careroot-cic",
     "private": true,
     "version": "0.0.0",
     "type": "module",
