--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^19.0.0",
         "react-blurhash": "^0.3.0",
         "react-bootstrap": "^2.10.9",
+        "react-datetime": "^3.3.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "react-icons": "^5.4.0",
